# chess-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cat  makefile
.github/workflows/: c-cpp.yml  release.yml
includes/: game.hpp  gameruler.hpp  gamewatcher.hpp  parser.hpp  piecehandler.hpp  utilities.hpp
includes/board/: board.hpp  tile.hpp
includes/check/: bishopchecker.hpp  checkmove.hpp  kingchecker.hpp  knightchecker.hpp  pawnchecker.hpp  queenchecker.hpp  roichecker.hpp  rookchecker.hpp  towerchecker.hpp
includes/pieces/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  roi.hpp  rook.hpp  tower.hpp
includes/ui/: cli.hpp
includes/ui/cli/: cli.hpp  parser.hpp
includes/ui/gui/: gui.hpp  ltexture.hpp
src/: checkmove.cpp  game.cpp  gameruler.cpp  gamewatcher.cpp  main.cpp  parser.cpp  piecehandler.cpp
src/board/: board.cpp  tile.cpp
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  roi.cpp  rook.cpp  tower.cpp
src/ui/: cli.cpp
src/ui/cli/: cli.cpp  parser.cpp
src/ui/gui/: gui.cpp  ltexture.cpp
test/: makefile  test-level.sh
test/data/: 3-leg-promo-bknight.txt  3-leg-promo-wknight.txt
